# isnad

./: .env.example  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: bcf1da0dec28_initial_schema.py
docs/: ARCHITECTURE.drawio  concept_to_code.md
examples/: __init__.py  langchain_demo.py  worked_example.py
experiments/: PAPER_GAP_ANALYSIS.md
experiments/corroboration_v1/: README.md  __init__.py  analyze.py  data_loader.py  run.py
experiments/corroboration_v1/data/: atom.json  black_hole.json  dna.json  electromagnetic_radiation.json  general_relativity.json  natural_selection.json  periodic_table.json  photosynthesis.json  plate_tectonics.json  quantum_mechanics.json  thermodynamics.json  wave_particle_duality.json
experiments/corroboration_v1/results/: report.txt  results.json
experiments/corroboration_v2/: .gitignore  README.md  __init__.py  analyze.py  data_loader.py  negative_controls.py  run.py  semantic_matcher.py
experiments/corroboration_v2/matches/: cross_source_matches.json  cross_topic_matches.json
experiments/corroboration_v2/results/: negative_controls.json  report_v2.txt  results_v2.json
experiments/corroboration_v3/: README.md  RESULTS.md  run.py
experiments/s8_gated_vs_ungated/: .gitignore  ANALYSIS_PLAN.md  DIAGNOSIS.md  README.md  analyze.py  audit_sample.py  calibrate.py  config.yaml  diagnose_coldstart.py  diagnose_grades.py  diagnose_rejected.py  extract.py  ground_truth.py  inject.py  narrators.py  risk_coverage.py  run.py  run_experiment.py  sweep_policy.py  sweep_run.py
src/isnad/: __init__.py  chain.py  corroboration.py  corroboration_engine.py  db.py  grading.py  grading_bayesian.py  matn.py  matrix.py  models.py  registry.py  types.py
src/isnad/api/: app.py  auth.py  (+2 more)
tests/: test_api.py  test_chain.py  test_corroboration.py  test_critics.py  test_deep_dive.py  test_edge_stress.py  test_firewall.py  test_grading.py  test_langchain_integration.py  test_matn.py  test_matrix.py  test_nli_critic.py  test_registry.py  test_types.py  test_v2_engines.py  test_worked_example.py  verify_full_system.py  verify_wiring.py
(+550 files in other folders)
